# google-forms-mcp

./: .env.example  .gitignore  INSTALL.md  QUICKSTART.md  README.md  analyze_template.py  auth.py  battle_test.py  cursor-mcp-config.json  debug_batch.py  debug_form.py  forms_api.py  get_token.py  install.ps1  install.sh  main.py  personalize_forms.py  pyproject.toml  requirements.txt  skill.md  test_batch_duplication.py  test_fixes.py  test_real_form.py  tools.py  verify_personalization.py
src/gforms/: __init__.py  api.py  auth.py  cli.py  models.py  templates.py
src/gtools/: __init__.py  cli.py  templates.py
src/gtools/core/: __init__.py  auth.py  base.py  scopes.py
src/gtools/forms/: __init__.py  api.py  commands.py  models.py
src/gtools/sheets/: __init__.py  api.py  commands.py  models.py
templates/examples/: customer_satisfaction.yaml  event_registration.yaml  feedback_form.yaml
